<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_task_btn"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/add_task_btn"/>
    <item
        android:id="@+id/delete_task_btn"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:title="@string/delete_task_btn"/>
     <item
        android:id="@+id/delete_all_task_btn"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete_all_task_btn"/>
    
    <item
        android:id="@+id/logOutBtn"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/logOutBtn"/>
</menu>