<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/time_stamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="5dp"
        android:text="@string/time_stamp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:id="@+id/task"
            style="@style/CodeFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/task"
            android:paddingRight="10dp"
            android:textIsSelectable="true"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/check_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_custom_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/todo_when"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/todo_when"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/location_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/location_where"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="true" />

</LinearLayout>