<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp" >

                <View style="@style/Divider" />

                <EditText
                    android:id="@+id/edit_description"
                    style="@style/CodeFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/edit_description"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp" >

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/geo_location"
                        style="@style/CodeFont"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:hint="@string/geo_location"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp" />

                    <Button
                        android:id="@+id/findAddressBtn"
                        style="@android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/findBtn" >
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp" >

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/date_of_task"
                        style="@style/CodeFont1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/date_of_task"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:textIsSelectable="true" />

                    <Button
                        android:id="@+id/setDateBtn"
                        style="@android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setBtn" >
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp" >

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/time_of_task"
                        style="@style/CodeFont1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/time_of_task"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:textIsSelectable="true" />

                    <Button
                        android:id="@+id/setTimeBtn"
                        style="@android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setBtn" >
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp" >

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/alarm_time_set"
                        style="@style/CodeFont1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/alarm_time_set"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:textIsSelectable="true" />

                    <ToggleButton
                        android:id="@+id/button_set_time_alarm"
                        style="@android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </ToggleButton>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp" >

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/alarm_location_set"
                        style="@style/CodeFont1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/alarm_location_set"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:textIsSelectable="true" />

                    <ToggleButton
                        android:id="@+id/button_set_location_alarm"
                        style="@android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </ToggleButton>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp" >

        <View style="@style/Divider" />
    </LinearLayout>

</LinearLayout>